fixed budget list income date to align center

--- a/src/container/bills/billsList.css
+++ b/src/container/bills/billsList.css
@@ -93,11 +93,6 @@
     font-size: 26px;
 }
 
-.income > .date > .date{
-    text-align: start;
-    padding-left: 80px;
-}
-
 .iconCheckBox {
     position: absolute;
     left: 50px;
